src/objects/Environment_Test_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Testers can input custom settings for testing purposes only.
If the Activated checkbox is unchecked, the system ignores these settings and runs in non-test mode.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referenced by code such that, if unchecked, all Environment Test Settings are ignored and the system runs in non-test mode.</description>
        <inlineHelpText>Referenced by code such that, if unchecked, all Environment Test Settings are ignored and the system runs in non-test mode.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Phone_Extension__c</fullName>
        <description>Users phone extension for test purposes.</description>
        <inlineHelpText>Users phone extension for test purposes.</inlineHelpText>
        <label>Test Phone Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_Phone_Number__c</fullName>
        <description>The tester should enter the 10-digit phone number that the system should call for testing purposes.</description>
        <inlineHelpText>The tester should enter the 10-digit phone number that the system should call for testing purposes.</inlineHelpText>
        <label>Test Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Environment Test Settings</label>
</CustomObject>